<resources>
    <string name="app_name">T-Shirt</string>
    <string name="titre_shirt">Create a Androis T-Shirt</string>
    <string name="titre_sexe">Choose your T-Shirt</string>
    <string name="radio_homme">Man</string>
    <string name="radio_femme">Woman</string>

    <string name="titre_color">Choose your color</string>
    <string name="radio_white">White</string>
    <string name="radio_red">Red</string>
    <string name="radio_blue">Blue</string>
    <string name="radio_yellow">Yellow</string>

    <string name="titre_taille">Choose your size</string>
    <string name="radio_small">Small</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_large">Large</string>
    <string name="radio_xlarge">XLarge</string>

    <string name="titre_front">You can add on the front</string>
    <string name="checkbox_logo">An Android logo</string>
    <string name="checkbox_text">An Android text</string>

    <string name="texte_view">View Front</string>
    <string name="texte_view_back">View Back</string>
    <string name="botton_save">Save</string>
    <string name="botton_restore">Restore</string>
    <string name="botton_cancel">Cancel</string>

    <string name="erreur">Error</string>
    <string name="restore">Restore</string>
    <string name="sauver">Save</string>
    <string name="file">filename</string>
</resources>